@@ -1,3 +1,9 @@
+* commit 0f9053075c12d87fb8e709de9ab842e349025092
+| Author: John Hoffman <jah5@princeton.edu>
+| Date:   Fri Mar 14 01:38:22 2014 -0400
+| 
+|     Added scripts to quantify accuracy vs choice in nscatter, ngrain and norientations. Edited documentation. Began adding some declarations and code for SED mode. Did timing tests for padded vs. unpadded FFTs. FFTW is slower than before, since we avoid working with wisdom at the moment. Added common FFT methods to common_mod. Added default declarations to constants.f95.
+|  
 * commit 30a88787c688995b3960d874b5dcfcd3c2d7eac1
 | Author: John Hoffman <jah5@princeton.edu>
 | Date:   Sun Mar 9 19:56:08 2014 -0400
